--- a/iText/TODO
+++ b/iText/TODO
@@ -1,2 +1,2 @@
 use autoclasspath tool (must be created :)
-rename to java-itext when importing into pkgsrc
+rename to java-iText when importing into pkgsrc
