--- a/cacti-spine/patches/patch-.._spine.1
+++ b/cacti-spine/patches/patch-.._spine.1
@@ -1,5 +1,6 @@
 $NetBSD$
 
+Replace the copyright year and version number to match the package
 --- ../spine.1.orig	2012-12-11 17:35:04.000000000 +0000
 +++ ../spine.1
 @@ -1,12 +1,12 @@
