--- a/ghostscript/TODO
+++ b/ghostscript/TODO
@@ -20,6 +20,7 @@ $NetBSD$
 - Build on DragonFly BSD is not tested
   for the patch-openjpeg_libopenjpeg_opj_malloc_h
 
+-----------------------------------------
 - To fix a problem with one particular combination:
 
 (1) the option at 
@@ -30,7 +31,7 @@ PKG_OPTIONS.gcr_type= ipa
 (2) and only if gs invoked from dvipdfmx via following sequence:
     ps2pdf
     ps2pdf14
-    ps2pdfwrt
+    ps2pdfwr
     gs -sDEVICE=pdfwrite
 
 gs failed to find the font Ryumin-Light-EUC-H
@@ -48,3 +49,11 @@ can be processed successfully even if
 following line in /etc/mk.conf mentioned in (1)
 PKG_OPTIONS.gcr_type= ipa
 is set.
+-----------------------------------------
+Above problem is turned out to be related -dSAFER
+option included in ps2pdfwr script. The similar thing
+was reported as following PR.
+Bug 691780 - -dSAFER seems to prevent loading of a ttf font 
+  http://bugs.ghostscript.com/show_bug.cgi?id=691780
+-----------------------------------------
+Interim fix is to eliminate -dSAFER from ps2pdfwr script.
