--- a/TODO
+++ b/TODO
@@ -97,6 +97,7 @@ Suggested package updates
 	o py-PyPE-2.9
 	o py-rpyc-3.2.1
 	o py-zeitgeist-0.9
+	o pylint-0.26.0
 	o rdup-1.1.13
 	o recoll-1.18.1
 	o rezound-0.12.3beta
