--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Suggested package updates
 	o dhex-0.68
 	o di-4.31
 	o directfb-1.0.0
+	o e17-1.0
 	o ecasound-2.9
 	o ecb-2.40
 	o editline-20120311.3.0
@@ -27,19 +28,21 @@ Suggested package updates
 	o evilvte-0.5.1
 	o evolution-couchdb-0.4.4
 	o fakenes-0.5.7
+	o fceux-2.2.0
 	o firebird-2.5
 	o flc-1.12
 	o gambas2-2.23.0
 	o gcc42-4.2.4
 	o gcc43-4.3.4
 	o geant-4.9.5p1
+	o gemrb-0.7.2
 	o gforge-4.5.11
 	o giggle-0.6.1
 	o gjs-1.30.1
 	o globulation2-0.9.4
 	o gnokii-0.6.31
 	o gnome-bluetooth-2.30.0
-	o gnunet-0.9.4
+	o gnunet-0.9.5
 	o gnupod-0.99.8
 	o gobject-introspection-0.9.12
 	o grandr-0.1
@@ -74,6 +77,7 @@ Suggested package updates
 	o libuuid-1.41.14
 	o lirc-0.8.6
 	o lives-1.8.0
+	o llvm-3.2
 	o lucene-3.6.1
 	o man-1.6f
 	o mcabber-0.10.2
@@ -95,6 +99,7 @@ Suggested package updates
 	o pessulus-2.30.4
 	o pike-7.8.700
 	o py-PyPE-2.9
+	o py-beets-1.0rc1
 	o py-rpyc-3.2.1
 	o py-zeitgeist-0.9
 	o pylint-0.26.0
@@ -117,7 +122,7 @@ Suggested package updates
 	o tmw-0.0.29.1
 	o torcs-1.3.4
 	o uptimed-0.3.17
-	o virtualbox-4.2.4
+	o virtualbox-4.2.6
 	o xaralx-bin-0.7.1692
 	o xf86-input-synaptics-1.6.2
 	o xf86-video-geode-2.11.14
