--- a/TODO
+++ b/TODO
@@ -50,6 +50,7 @@ Suggested package updates
 	o grisbi-0.8.4
 	o grsync-1.2.0
 	o gtkaml-0.4.3
+	o gtkmm3-3.6.0
 	o gtypist-2.9.2
 	o guichan-0.8.1
 	o guitone-0.9
