--- a/TODO
+++ b/TODO
@@ -123,6 +123,7 @@ Suggested package updates
 	o tk86-8.6b3
 	o tmw-0.0.29.1
 	o torcs-1.3.4
+	o umurmur-0.2.10
 	o uptimed-0.3.17
 	o virtualbox-4.2.6
 	o xaralx-bin-0.7.1692
