Add as one test done to TODO.

--- a/espeak/TODO
+++ b/espeak/TODO
@@ -1,2 +1,2 @@
 - ESPEAK_VERSION in PLIST is hardcoded now
-- Function is not tested (at all) yet.
+- Function is tested only on 6.0-ish/i386 for now.
