--- a/TODO
+++ b/TODO
@@ -68,7 +68,7 @@ Suggested package updates
 	o kmymoney4-4.6.2
 	o kvirc-3.4.2
 	o lasem-0.3.3
-	o libburn-1.2.4
+	o libburn-1.2.6
 	o libgksu-2.0.4
 	o libgtk-java-2.10.2
 	o libmemcached-0.53
@@ -110,6 +110,7 @@ Suggested package updates
 	o samhain-3.0.9
 	o scantailor-0.9.11.1
 	o sflphone-0.7.2
+	o showfont-1.0.4
 	o siege-2.72
 	o sleuthkit-3.2.3
 	o smc-1.8
