Convert xft to xft2, the option name found in mk/defaults/options.description.

--- a/fvwm265/TODO
+++ b/fvwm265/TODO
@@ -1,9 +1,9 @@
 TODO
 done
   NetBSD/amd 6.99.16 clang no option
-  NetBSD/amd 6.99.16 clang gtk rplay xrender xcursor xft
+  NetBSD/amd 6.99.16 clang gtk rplay xrender xcursor xft2
   NetBSD/amd 6.0.1 no option
-  NetBSD/amd 6.0.1 gtk rplay xrender xcursor xft (running fine)
-  NetBSD/i386 5.2  gtk rplay xrender xcursor xft
+  NetBSD/amd 6.0.1 gtk rplay xrender xcursor xft2 (running fine)
+  NetBSD/i386 5.2  gtk rplay xrender xcursor xft2
   DragonFly 3.2.2 + gcc-4.7 no option
   DragonFly 3.2.2 + gcc-4.7 gtk rplay 
