--- a/TODO
+++ b/TODO
@@ -127,6 +127,7 @@ Suggested package updates
 	o xf86-input-synaptics-1.6.2
 	o xf86-video-geode-2.11.14
 	o xf86-video-nouveau-1.0.6
+	o zapping-0.10cvs6
 
 Suggested ready to import packages
 =================================
