--- a/fvwm265/TODO
+++ b/fvwm265/TODO
@@ -1,9 +1,44 @@
-TODO
-done
-  NetBSD/amd 6.99.16 clang no option
-  NetBSD/amd 6.99.16 clang gtk rplay xrender xcursor xft2
-  NetBSD/amd 6.0.1 no option
-  NetBSD/amd 6.0.1 gtk rplay xrender xcursor xft2 (running fine)
-  NetBSD/i386 5.2  gtk rplay xrender xcursor xft2
-  DragonFly 3.2.2 + gcc-4.7 no option
-  DragonFly 3.2.2 + gcc-4.7 gtk rplay 
+
++PKG_SUPPORTED_OPTIONS=         fribidi gdk-imlib gnome gtk png rplay svg stroke xrender xcursor xft2
++PKG_SUGGESTED_OPTIONS=         fribidi gdk-imlib gnome gtk png rplay svg stroke xrender xcursor xft2 
+
+The first trial gave:
+
+
+Fvwm Configuration:
+
+  Version:     2.6.5
+
+  Executables: /usr/pkg/bin
+  Man pages:   /usr/pkg/man
+  Modules:     /usr/pkg/lib/X11/fvwm2/2.6.5
+  Data files:  ${prefix}/share/fvwm2
+  Doc files:   ${prefix}/share/doc/fvwm2
+  Perl lib:    ${prefix}/share/fvwm2/perllib
+  Locale msg:  ${prefix}/share/locale  ar de fr sv_SE zh_CN
+
+  With Asian bi-direct. text support? yes
+  With Gettext Native Lang support?   yes (intl library)
+  With GTK+ required for FvwmGtk?     yes
+  With GDK image support in FvwmGtk?  no: Failed on gdk-imlib, see config.log
+  With GNOME libs support in FvwmGtk? no: Can't find working gnome-config
+  With Iconv support?                 yes (from C library)
+  With Mouse strokes (gestures)?      no: Can't find working libstroke
+  With PNG image support?             yes
+  With ReadLine sup. in FvwmConsole?  yes
+  With RPlay support in FvwmEvent?    yes
+  With Shaped window support?         yes
+  With Shared memory for XImage?      yes
+  With Session Management support?    yes
+  With SVG image support?             no: librsvg library or header not found
+  With Xcursor support?               yes
+  With Xinerama multi-head support?   yes
+  With Xft anti-alias font support?   yes (version 2)
+  With XPM image support?             yes
+  With Xrender image support?         yes
+  Build man pages?                    yes
+  Build HTML documentation?           no
+
+See INSTALL.fvwm for the description of what this may mean.
+modena@makoto 18:42:21/130120(..wip/fvwm265)%
+:
