--- a/TODO
+++ b/TODO
@@ -105,13 +105,14 @@ Suggested package updates
 	o rosegarden-current-1.4.0
 	o rsyslog6-6.3.6
 	o rygel-0.16.4
-	o samhain-3.0.9
+	o samhain-3.0.10
 	o scantailor-0.9.11.1
 	o sflphone-0.7.2
 	o showfont-1.0.4
 	o siege-2.72
 	o sleuthkit-3.2.3
 	o smc-1.8
+	o swift-2.0
 	o sxemacs-22.1.10
 	o taskcoach-1.3.14
 	o tcl86-8.6b3
