--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ Suggested package updates
 	o couchdb-glib-0.6.3
 	o d4x-2.5.7.1
 	o daphne-1.0
-	o di-4.31
+	o di-4.34
 	o directfb-1.0.0
 	o e17-1.0
 	o ecasound-2.9
@@ -121,6 +121,8 @@ Suggested package updates
 	o torcs-1.3.4
 	o umurmur-0.2.10
 	o uptimed-0.3.17
+	o vidalia-0.2.21
+	o vidalia-devel-0.3.3
 	o virtualbox-4.2.6
 	o xaralx-bin-0.7.1692
 	o xf86-input-synaptics-1.6.2
