--- a/TODO
+++ b/TODO
@@ -34,6 +34,7 @@ Suggested package updates
 	o gemrb-0.7.2
 	o gforge-4.5.11
 	o giggle-0.6.1
+	o girara-0.1.5
 	o gjs-1.30.1
 	o globulation2-0.9.4
 	o gnokii-0.6.31
@@ -71,7 +72,7 @@ Suggested package updates
 	o libmemcached-0.53
 	o libpthread-stubs-0.3
 	o libuuid-1.41.14
-	o lives-1.8.0
+	o lives-1.8.2
 	o llvm-3.2
 	o lucene-3.6.1
 	o man-1.6f
@@ -100,6 +101,7 @@ Suggested package updates
 	o pylint-0.26.0
 	o rdup-1.1.13
 	o recoll-1.18.1
+	o retroarch-0.9.8
 	o rezound-0.12.3beta
 	o rosegarden-current-1.4.0
 	o rsyslog6-6.3.6
