--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ Suggested package updates
 	o argouml-0.24
 	o atlas-3.10.0
 	o cairo-java-1.0.8
-	o calligra-2.5.4
+	o calligra-2.6
 	o ccrypt-1.10
 	o cgal-4.0
 	o cinelerra-4.4
@@ -77,7 +77,8 @@ Suggested package updates
 	o lucene-3.6.1
 	o man-1.6f
 	o mcabber-0.10.2
-	o meta-tracker-0.15.0
+	o meta-tracker-0.14.5
+	o miniupnpc-1.8
 	o miro-5.0
 	o mixxx-1.9.2
 	o mpgedit-0.73dev2
