--- a/TODO
+++ b/TODO
@@ -77,6 +77,7 @@ Suggested package updates
 	o lucene-3.6.1
 	o man-1.6f
 	o mcabber-0.10.2
+	o mcwm-20130209.2
 	o meta-tracker-0.14.5
 	o miniupnpc-1.8
 	o miro-5.0
