--- a/TODO
+++ b/TODO
@@ -39,6 +39,7 @@ Suggested package updates
 	o globulation2-0.9.4
 	o gnokii-0.6.31
 	o gnome-bluetooth-2.30.0
+	o gnome-do-0.9
 	o gnunet-0.9.5
 	o gnupod-0.99.8
 	o gobject-introspection-0.9.12
