--- a/TODO
+++ b/TODO
@@ -84,6 +84,7 @@ Suggested package updates
 	o mpgedit-0.73dev2
 	o mumble-1.2.3
 	o mupen64-0.5
+	o musescore-1.3
 	o nautilus-open-terminal-0.19
 	o newsbeuter-2.4
 	o ogmrip-0.13.7
