--- a/TODO
+++ b/TODO
@@ -25,6 +25,7 @@ Suggested package updates
 	o evilvte-0.5.1
 	o evolution-couchdb-0.4.4
 	o fakenes-0.5.7
+	o fceux-2.2.1
 	o firebird-2.5
 	o flc-1.12
 	o gambas2-2.23.0
@@ -81,13 +82,14 @@ Suggested package updates
 	o miniupnpc-1.8
 	o miro-5.0
 	o mixxx-1.9.2
+	o moe-1.5
 	o mpgedit-0.73dev2
 	o mumble-1.2.3
 	o mupen64-0.5
 	o musescore-1.3
 	o nautilus-open-terminal-0.19
 	o newsbeuter-2.4
-	o ogmrip-0.13.7
+	o ogmrip-1.0.0
 	o omega-1.2.10
 	o openvrml-0.18.9
 	o osmose-0.9.96
@@ -111,7 +113,7 @@ Suggested package updates
 	o scantailor-0.9.11.1
 	o sflphone-0.7.2
 	o showfont-1.0.4
-	o siege-2.77
+	o siege-2.78
 	o sleuthkit-3.2.3
 	o smc-1.8
 	o swift-2.0
