--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Suggested package updates
 
 	o argouml-0.24
 	o atlas-3.10.0
+	o beast-3.8.0
 	o cairo-java-1.0.8
 	o calligra-2.6.1
 	o ccrypt-1.10
