--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@ Suggested package updates
 	o fakenes-0.5.7
 	o fceux-2.2.1
 	o firebird-2.5
+	o flare-engine-17.1
 	o flc-1.12
 	o gambas2-2.23.0
 	o gcc42-4.2.4
