--- a/gdb/TODO
+++ b/gdb/TODO
@@ -1,5 +1,5 @@
 TODO
-- NetBSD/i386 fails to compile on 6.0 to 6.99.18 (bsd-kvm.c)
+- NetBSD/i386: gdb fails to compile on 6.0 to 6.99.18 (bsd-kvm.c)
 - Dragonfly/i386 3.2.2: list command works, but cannot run programs 
 - devel/gdb/patches/patch-* are not reviewed yet for inclusion
 - Test on Dragonfly amd64, SunOS and Linux.
