--- a/TODO
+++ b/TODO
@@ -72,7 +72,7 @@ Suggested package updates
 	o libmemcached-0.53
 	o libpthread-stubs-0.3
 	o libuuid-1.41.14
-	o lives-1.8.2
+	o lives-2.0.3
 	o llvm-3.2
 	o lucene-3.6.1
 	o man-1.6f
@@ -113,6 +113,7 @@ Suggested package updates
 	o scantailor-0.9.11.1
 	o sflphone-0.7.2
 	o showfont-1.0.4
+	o siege-3.0.0
 	o sleuthkit-3.2.3
 	o smc-1.9
 	o swift-2.0
@@ -131,6 +132,7 @@ Suggested package updates
 	o xf86-input-synaptics-1.7.0
 	o xf86-video-geode-2.11.14
 	o xf86-video-nouveau-1.0.7
+	o xfs-1.1.3
 	o zapping-0.10cvs6
 
 Suggested ready to import packages
