--- a/lldpd/TODO
+++ b/lldpd/TODO
@@ -1,4 +1,4 @@
-- fix pkg-config inability to see libevent during configure
 - use options framework for snmp, xml and json support
+- write a rc.d startup script for the lddpd server
 - use proper chroot dir instead of /nonexistent
 
