--- a/TODO
+++ b/TODO
@@ -75,13 +75,14 @@ Suggested package updates
 	o meta-tracker-0.16.1
 	o miniupnpc-1.8
 	o miro-5.0
-	o mixxx-1.9.2
+	o mixxx-1.11.0
 	o moe-1.5
 	o mpgedit-0.73dev2
 	o mumble-1.2.3
 	o mupen64-0.5
 	o musescore-1.3
 	o nautilus-open-terminal-0.19
+	o ncdu-1.10
 	o newsbeuter-2.4
 	o ogmrip-1.0.0
 	o omega-1.2.10
