--- a/dolphin/TODO
+++ b/dolphin/TODO
@@ -1,2 +1,2 @@
-* Fix Cg and SOIL detection;
+* Fix Cg detection. The includes are not being buildlink'd for some reason;
 * Test wxGTK29 (wxUnicode) option after it's packaged;
