--- a/TODO
+++ b/TODO
@@ -64,6 +64,7 @@ Suggested package updates
 	o kmymoney4-4.6.2
 	o kvirc-3.4.2
 	o libburn-1.3.0
+	o libdmx-1.1.3
 	o libgtk-java-2.10.2
 	o libpthread-stubs-0.3
 	o lives-2.0.4
