--- a/trustedQSL/TODO
+++ b/trustedQSL/TODO
@@ -1,10 +1,8 @@
-- This is 1.14 beta only, some redundent lines left in Makefile
-  to migrate production version.
-- set LICENSE= line
-- checked with X11_TYPE=modular only for now
+- Set LICENSE= line
+- Checked with X11_TYPE=modular only for now
 - Following SUBST_CLASSES are all to be applied
   post-build stage, probably cmake related problem.
   Should be eliminated: 
-   SUBST_CLASSES+=		x11r7
-   SUBST_CLASSES+=		workaround
+   SUBST_CLASSES+=		x11r7	   (X11_TYPE= modular only)
    SUBST_CLASSES+=		rpath-link
+   SUBST_CLASSES+=		lastcolon
