(1) Makefile   - Move DragonFly setup lines into conditional.   - Add TEST_ENV= line for 'make test' target.
(2) files/dragonfly-default.exp
  - Have compiler environment for 'make test' target in
    this file (refered from Makefile TEST_ENV).

(3) TODO
  - Add results of 'make test' on DragonFly/i386

--- a/gdb/TODO
+++ b/gdb/TODO
@@ -13,3 +13,16 @@ DONE
   and make test passes more than 95 % of testcases.
 - NetBSD/i386: 6.0 OK Tested with gcc 4.7 and make test passes 90 %
   of the testcases.
+- DragonFly 3.4.2/i386 make test results (for now)
+   -----
+   tail -12  work/gdb-7.5.1/gdb/testsuite/gdb.sum
+                   === gdb Summary ===
+   
+   # of expected passes            4962
+   # of unexpected failures        3053
+   # of expected failures          35
+   # of known failures             20
+   # of untested testcases         174
+   # of unresolved testcases       203
+   # of unsupported tests          149
+   -----
