--- a/gdb/TODO
+++ b/gdb/TODO
@@ -38,4 +38,20 @@ DONE
    # of untested testcases         189
    # of unresolved testcases       165
    # of unsupported tests          161
+
+- NetBSD/macppc 6.1_RC2 make test results (with 7.5.1)
    -----
+   tail -12  work/gdb-7.5.1/gdb/testsuite/gdb.sum
+                 === gdb Summary ===
+   # of expected passes            12234
+   # of unexpected failures        297
+   # of unexpected successes       2
+   # of expected failures          38
+   # of known failures             37
+   # of untested testcases         173
+   # of unresolved testcases       6
+   # of unsupported tests          154
+   -----
+
+
+
