Adding NetBSD/amd64 6.1_RC2 results (7.5.1).

--- a/gdb/TODO
+++ b/gdb/TODO
@@ -51,7 +51,15 @@ DONE
    # of untested testcases         173
    # of unresolved testcases       6
    # of unsupported tests          154
+
+- NetBSD/amd64 6.1_RC2 make test results (with 7.5.1)
    -----
-
-
-
+                   === gdb Summary ===
+   # of expected passes            12515
+   # of unexpected failures        395
+   # of unexpected successes       2
+   # of expected failures          40
+   # of known failures             52
+   # of untested testcases         172
+   # of unresolved testcases       6
+   # of unsupported tests          156
