--- a/gdb/TODO
+++ b/gdb/TODO
@@ -77,4 +77,41 @@ DONE
    # of untested testcases         173
    # of unresolved testcases       7
    # of unsupported tests          153
+
+- NetBSD/amd64 6.1 make test results (with 7.5.1)
    -----
+ (with patch-gdb_bsd-kvm.c)
+                === gdb Summary ===
+   # of expected passes            12520
+   # of unexpected failures        414
+   # of unexpected successes       2
+   # of expected failures          40
+   # of known failures             52
+   # of untested testcases         173
+   # of unresolved testcases       7
+   # of unsupported tests          153
+
+- NetBSD/amd64 6.1 make test results (with 7.5.1)
+   -----
+ (with new (5.2 adaptation) patch-gdb_bsd-kvm.c)
+              === gdb Summary ===
+   # of expected passes            12525
+   # of unexpected failures        413
+   # of unexpected successes       2
+   # of expected failures          40
+   # of known failures             52
+   # of untested testcases         173
+   # of unresolved testcases       6
+   # of unsupported tests          153
+
+- NetBSD/i386 5.2 make test results (with 7.5.1)
+   -----
+ (with new (5.2 adaptation) patch-gdb_bsd-kvm.c)
+                === gdb Summary ===
+   # of expected passes            11310
+   # of unexpected failures        1183
+   # of expected failures          40
+   # of known failures             47
+   # of untested testcases         176
+   # of unresolved testcases       7
+   # of unsupported tests          159
