--- a/gdb/TODO
+++ b/gdb/TODO
@@ -7,6 +7,8 @@ TODO
 - Run pkglint and do cleanup.
 - Is the addition of libpthread_dbg necessary for full functionality
   as done by the gdb 7.3 in NetBSD src ?
+- patch-opcodes_configure
+  (This reverts to 7.5.1, why is this necessary is unknown now)
 
 DONE
 - NetBSD/amd64 6.1_RC1 and 6.99.19 OK Tested with gcc/gfortran 4.8.0
