--- a/samba/TODO
+++ b/samba/TODO
@@ -1,1 +1,3 @@
-CVE-2013-0172
+ERROR: lib/python2.7/site-packages/samba/samba3/libsmb_samba_internal.so: missing library: libtalloc.so.2
+ERROR: lib/samba/libinterfaces.so: missing library: libtalloc.so.2
+ERROR: lib/samba/libsmbpasswdparser.so: missing library: libtalloc.so.2
