--- a/samba/TODO
+++ b/samba/TODO
@@ -1,3 +1,15 @@
 ERROR: lib/python2.7/site-packages/samba/samba3/libsmb_samba_internal.so: missing library: libtalloc.so.2
 ERROR: lib/samba/libinterfaces.so: missing library: libtalloc.so.2
 ERROR: lib/samba/libsmbpasswdparser.so: missing library: libtalloc.so.2
+
+(NetBSD/amd64 5.1 has following problem)
+[3655/3770] Linking default/source3/winbindd/winbindd
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/liblibsmb.so: undefined reference to `wbcCredentialCache@WBCLIENT_0.9'
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/liblibsmb.so: undefined reference to `wbcFreeMemory@WBCLIENT_0.9'
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/libauth4.so: undefined reference to `wbcErrorString@WBCLIENT_0.9'
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/libauth4.so: undefined reference to `wbcAuthenticateUserEx@WBCLIENT_0.9'
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/libauth4.so: undefined reference to `wbcFreeMemory@WBCLIENT_0.9'
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/libauth4.so: undefined reference to `wbcErrorString@WBCLIENT_0.9'
+/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin/shared/private/libauth4.so: undefined reference to `wbcAuthenticateUserEx@WBCLIENT_0.9'
+Waf: Leaving directory `/usr/pkgsrc/wip/samba/work/samba-4.0.7/bin'
+
