Add URL for this problem.

--- a/simulavr/TODO
+++ b/simulavr/TODO
@@ -7,3 +7,6 @@ avr-gcc -g -Os -mmcu=atmega128 -DF_CPU=4000000 -c -o main.o main.c
 main.c:8:5: error: attempt to use poisoned "SIG_OUTPUT_COMPARE2"
 gmake[2]: *** [main.o] Error 1
 gmake[2]: Leaving directory `/export/CHROOT/usr/pkgsrc/wip/simulavr/work/simulavr-1.0.0/examples/atmega128_timer'
+
+See:
+  http://savannah.nongnu.org/bugs/?35737
