--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ Suggested package updates
 	o cairo-java-1.0.8
 	o calligra-2.6.4
 	o ccrypt-1.10
+	o celery-3.0.21
 	o cinelerra-4.4
 	o d4x-2.5.7.1
 	o daphne-1.0
