--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ Suggested package updates
 	o atlas-3.10.0
 	o beast-0.8.2
 	o blam-1.8.12
+	o blink-0.5.0
 	o cairo-java-1.0.8
 	o calligra-2.7
 	o ccrypt-1.10
