Add note for hardcoded python dependency.

--- a/simulavr/TODO
+++ b/simulavr/TODO
@@ -1,2 +1,5 @@
 - In configuration, seeing following message:
   build verilog modul avr.vpi = no
+- Followng line in Makefile may not be portable
+  CONFIGURE_ARGS+=	--enable-python=python2.7
+  .include "../../lang/python27/buildlink3.mk"
